src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  border: none;
  outline: none;
  box-sizing: border-box;
}

*:focus-visible {
  outline: 2px solid var(--text-color);
}

:root {
  --main-color: hsl(0, 100%, 65%);
  --primary-color: hsl(0, 0%, 100%);
  --secondary-color: hsl(0, 0%, 95%);
  --text-color: hsl(0, 0%, 0%);
  --text-color-reverse: hsl(0, 0%, 100%);
  --theme-icon: url('assets/images/icons/moon.svg');
  --font-size-big: 3.2rem;
  --font-size-regular: 1.6rem;
  --font-size-tooltip: 1rem;
  --icon-size-adjust: 2rem;
  --image-width: 21rem;
  --image-height: 34rem;
}

@media (max-width: 991px) {
  :root {
    --font-size-big: 2.7rem;
    --font-size-regular: 1.4rem;
    --font-size-tooltip: 0.9rem;
    --icon-size-adjust: 1.8rem;
  }
}

@media (max-width: 768px) {
  :root {
    --font-size-big: 2.2rem;
    --font-size-regular: 1.2rem;
    --font-size-tooltip: 0.8rem;
    --icon-size-adjust: 1.6rem;
  }
}

@media (max-width: 500px) {
  :root {
    --font-size-big: 2rem;
    --font-size-regular: 1rem;
    --font-size-tooltip: 0.7rem;
    --icon-size-adjust: 1.4rem;
    --image-width: 17rem;
    --image-height: 27rem;
  }
}

.dark {
  --primary-color: hsl(210, 5%, 14%);
  --secondary-color: hsl(0, 0%, 9%);
  --text-color: hsl(0, 0%, 100%);
  --text-color-reverse: hsl(0, 0%, 0%);
  --theme-icon: url('assets/images/icons/sun.svg');
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: var(--primary-color);
}

::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 100vh;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: var(--font-size-big);
  font-weight: 700;
}

p {
  font-size: var(--font-size-regular);
  text-wrap: pretty;
}

